...
    "Discard unsaved changes?" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Discard unsaved changes?" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Descartar alterações não salvas?" } }
      }
    },
    "Edit" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Edit" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Editar" } }
      }
    },
    "Editor" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Editor" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Editor" } }
      }
    },
    "English" : {
...
    "Find  ⌘F" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Find  ⌘F" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Buscar  ⌘F" } }
      }
    },
    "Find in document" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Find in document" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Buscar no documento" } }
      }
    },
    "Format" : {
...
    "Raster doesn't have permission to access this folder." : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Raster doesn't have permission to access this folder." } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "O Raster não tem permissão para acessar esta pasta." } }
      }
    },
    "Read" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Read" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Ler" } }
      }
    },
    "Reading" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Reading" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Leitura" } }
      }
    },
    "Reveal in Finder" : {
...
    "Saved %@" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Saved %@" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "%@ salvo" } }
      }
    },
    "Split" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Split" } },
        "pt-BR" : { "stringUnit" : { "state" : "translated", "value" : "Dividido" } }
      }
    },
    "Strikethrough" : {
...
